# osaurus

./: .gitignore  CLAUDE.md  Makefile  README.md
.github/workflows/: ci.yml
Resources/vmlx_engine/: pyproject.toml
Resources/vmlx_engine/vmlx_engine/: cli.py  engine_core.py  model_config_registry.py  model_configs.py  output_collector.py  request.py  reranker.py  server.py
Resources/vmlx_engine/vmlx_engine/api/: anthropic_adapter.py  models.py  ollama_adapter.py  utils.py
Resources/vmlx_engine/vmlx_engine/engine/: base.py
Resources/vmlx_engine/vmlx_engine/models/: mllm.py
Resources/vmlx_engine/vmlx_engine/reasoning/: mistral_parser.py
Resources/vmlx_engine/vmlx_engine/tool_parsers/: abstract_tool_parser.py
docs/: ARCHITECTURE.md  FEATURES.md  FEATURE_COMPARISON.md  VMLX_ENGINE.md
docs/audits/: 2026-04-01-cache-runtime-audit.md  2026-04-02-mistral4-fixes.md
docs/plans/: 2026-03-29-vmlx-runtime-integration.md
osaurus.xcworkspace/xcshareddata/swiftpm/: Package.resolved
scripts/: bundle-python.sh
